--- a/estilos.css
+++ b/estilos.css
@@ -562,10 +562,11 @@ header #navbar li a{
 
 @media screen and (max-width: 630px) {
 	.content{
+		height: 60vh;
     width: auto;
   }
   header {
-    margin-top: 0px;
+    margin-top: -1000px;
   }
 	header .logo {
 	  font-size: 0.6em;
